Fix bugs, issues, and smells